[package]
name = "wolfofcrypto"
version = "0.1.0"
authors = ["David <segaslp@gmail.com>"]

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
diesel = { version = "0.99.0", features = ["sqlite"] }
diesel_codegen = { version = "0.16.0", features = ["sqlite"] }
diesel_infer_schema = { version = "1.0.0-beta1", features = ["sqlite"] }
r2d2-diesel = "*"
r2d2 = "*"
dotenv = "0.9.0"
serde_json = "1.0"
serde = "*"
serde_derive = "*"
log = "0.3"
fern = "0.4"
chrono = "*"
time = "0.1"
futures = "0.1"
hyper = "0.11"
hyper-tls = "*"
tokio-core = "0.1"
rustc-serialize = "*"
failure = "0.1.1"

[dependencies.iron]
version = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]